--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     height: 100vh;
     background: linear-gradient(151deg, #0F2B05, #000000);
+    background-attachment: fixed;
 }
 
 header {
@@ -30,7 +31,7 @@ header {
     height: 317px;
     background-image: url(../assets/bg-explorer.svg);
     background-size: contain;
-    box-shadow: 0px 0px 10px black;
+    background-repeat: no-repeat;
     cursor: pointer;
     
     opacity: 0;
